顶部搜索区域完成

--- a/index.html
+++ b/index.html
@@ -69,7 +69,18 @@
 </head>
 
 <body>
-
+    <!-- 头部区域 -->
+    <header>
+        <div class="wrapper">
+            <a href="javascript:;" class="menu"></a>
+            <div>
+                <i class="jd_logo"></i>
+                <i class="search"></i>
+                <input type="text" placeholder="移动硬盘">
+            </div>
+            <a href="javascript:;" class="login">登录</a>
+        </div>
+    </header>
 </body>
 <script>
     // 获取当前屏幕的宽度
